# nanoclaw

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_ja.md  README_zh.md  REFACTOR.md  SCHEDULED_TASKS_MIGRATION.md  migrate-v2.sh  nanoclaw.sh  package-lock.json  package.json  pnpm-lock.yaml  setup.sh
.claude/: settings.json
container/: CLAUDE.md  Dockerfile  Dockerfile.local  build.sh  entrypoint.sh
container/mcp-servers/withings/: mcp.json  pyproject.toml  run.sh
container/mcp-servers/withings/src/: auth.py  server.py  withings_client.py
docs/: architecture-diagram.md  architecture.md  checklist.md  db-central.md  module-contract.md  v2-agent-runner-details.md  v2-api-details.md  v2-architecture-diagram.html  v2-architecture-diagram.md  v2-architecture-draft.md  v2-checklist.md  v2-db-central.md  v2-db-session.md  v2-db.md
patches/: @chat-adapter__discord@4.26.0.patch
scripts/: add-tracker-email-mcp.ts  agent-watchdog.sh  backup-groups.sh  cdp-click.js  cdp-cookies.js  cleanup-sessions.sh  delete-cli-agent.ts  delete-defunct-groups.ts  disk-cleanup.sh  fix-tracker-container-config.ts  fix-worker-cron-report.ts  fix-worker-hex-destinations.ts  init-cli-agent.ts  init-first-agent.ts  init-hub-session.ts  init-intel-db.ts  init-work-db.ts  init-worker-session.ts  insert-axiom-kickoff.ts  insert-hex-disclaimer-task.ts  insert-hex-email-retest.ts  insert-hex-kickoff.ts  insert-tracker-container-config.ts  insert-tracker-gh-token-rotate-reminder.ts  insert-tracker-npm-publish-kick.ts  insert-tracker-publish-success.ts  migrate-wiki-lint.ts  (+52 more)
(+546 files in other folders)
