[project]
name = "withings-mcp-server"
version = "1.0.0"
description = "MCP server for Withings health data (weight, sleep, activity, heart)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
withings-mcp = "src.server:main"
withings-auth = "src.auth:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
